changes to mobile focused aspects

--- a/src/components/slide/slide.css
+++ b/src/components/slide/slide.css
@@ -2,13 +2,64 @@
     display:flex;
     justify-content: center;
     align-items:center;
-    height: 100vh;
+    margin: 50px;
     
 }
 
-.sbc__slide-container img{
-    width: 800px;
-    height: 400px;
-    
+.sbc__slide-container img{   
+    align-items:center;
+    width:100%;
+    justify-content: center;
+    border:solid;
+    border-width: 10px;
+    border-color:var(--color-bg);
 
 }
+
+
+
+
+  /* Media query for screens with a maximum width of 768px */
+  @media screen and (max-width: 768px) {
+    
+    .sbc__slide-container  {
+       max-height: 35vh; 
+       margin: 25px;
+      }
+      .sbc__slide-container img {
+      max-height: 35vh; 
+      max-width: 50vh;
+      border:solid;
+      border-width: 5px;
+      border-color:var(--color-bg);
+    }
+  }
+  
+  /* Media query for screens with a maximum width of 576px */
+  @media screen and (max-width: 576px) {
+    .sbc__slide-container  {
+        max-height: 35vh; 
+        margin: 25px;
+       }
+       .sbc__slide-container img {
+       
+       max-width: 320px;
+       border:solid;
+       border-width: 3px;
+       border-color:var(--color-bg);
+     }
+  }
+
+  @media screen and (max-width: 390px) {
+    .sbc__slide-container  {
+        max-height: 35vh; 
+        margin: 25px;
+       }
+       .sbc__slide-container img {
+        
+       max-width: 300px;
+       border:solid;
+       border-width: 2px;
+       border-color:var(--color-bg);
+     }
+  }
