--- a/src/components/dlcalendar/dlcalendar.css
+++ b/src/components/dlcalendar/dlcalendar.css
@@ -48,7 +48,7 @@
     font-size: 18px;
     line-height: 30px;
     padding: 0.5rem 1rem;
-    border-radius: .5rem;
+    
     margin: 10px;
 
     border: none;
@@ -79,6 +79,7 @@
     .sbc__dlc-content h3 {
         font-size: 18px;
         line-height: 32px;
+        justify-content: center;
     }
 
     .sbc__dlc-btn button {
