--- a/src/containers/possibility/possibility.css
+++ b/src/containers/possibility/possibility.css
@@ -48,7 +48,9 @@
     line-height: 30px;
     color: #71E5FF;
 }
-
+.sbc__possibility-content h4:hover {
+    font-size: larger;
+}
 .sbc__possibility-content h4:last-child {
     color: #ff8A71;
 }
